fixed navbar colors and background on mobile. updated lets connect copy

--- a/styles/style-prefixed.css
+++ b/styles/style-prefixed.css
@@ -20,7 +20,7 @@ html {
   /* overflow-y: scroll; */
 }
 .about-title {
-    font-family: "Source Code Pro", monospace;
+  font-family: "Source Code Pro", monospace;
 }
 .box {
   background-color: #fef9f4;
@@ -32,9 +32,7 @@ body {
   background-color: #141740;
   overflow-x: hidden;
 }
-.bg-primary {
-  background-color: #141740;
-}
+
 #code-graphic {
   z-index: 98;
 }
@@ -76,31 +74,30 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
 }
-#skills, #skills div{
-    display: flex;
-    /* padding: 0;
+#skills,
+#skills div {
+  display: flex;
+  /* padding: 0;
     margin: 0; */
 }
 #skills {
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content:space-around;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-#skills .skill{
-    /* flex-basis: 25%; */
+#skills .skill {
+  /* flex-basis: 25%; */
 }
 
-.skill i{
-    /* margin-bottom: 0; */
+.skill i {
+  /* margin-bottom: 0; */
 }
-.skill{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1em;
-    
-
+.skill {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
 }
 
 .nav-links,
@@ -113,7 +110,19 @@ body {
   color: #fef9f4;
 }
 .tabs a {
-  color: #f5f5f5;
+  color: #fef9f4;
+  border-bottom-color:#fef9f4;
+}
+
+.tabs a:hover {
+    color: #00afb9;
+    border-bottom-color:#00afb9;
+  }
+  @media screen and (max-width: 1023px) {
+   .navbar-menu {
+       background-color: transparent;
+   }
+
 }
 .name-header,
 h1 {
@@ -130,8 +139,6 @@ h1 {
     1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
     1px 30px 60px rgba(16, 16, 16, 0.4);
 }
-
-
 
 .lead,
 .subtitle,
@@ -173,6 +180,12 @@ h1 {
 }
 
 /* --- UTILITY --- */
+.bg-primary {
+  background-color: #141740;
+}
+.bg-secondary {
+  background-color: #00afb9;
+}
 .rounded {
   border-radius: 0.5rem;
 }
@@ -182,11 +195,11 @@ h1 {
 
 /* --- SHADOWS --- */
 .depth-shadow {
-    text-shadow: 1px 18px 6px rgba(16, 16, 16, 0.4),
-      1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
-      1px 30px 60px rgba(16, 16, 16, 0.4);
-  }
-  
+  text-shadow: 1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
+    1px 30px 60px rgba(16, 16, 16, 0.4);
+}
+
 .title-shadow,
 .image {
   /* filter: drop-shadow( 1px 30px 60px rgba(16,16,16,0.4)); */
@@ -275,26 +288,26 @@ h1 {
 }
 
 .fade-out-section {
-    opacity: 1;
-    -webkit-transform: translateY(20vh);
-    -ms-transform: translateY(20vh);
-    transform: translateY(20vh);
-    visibility: visible;
-    -webkit-transition: opacity 1.1s ease-out, -webkit-transform 1.2s ease-out;
-    transition: opacity 1.1s ease-out, -webkit-transform 1.2s ease-out;
-    -o-transition: opacity 1.1s ease-out, transform 1.2s ease-out;
-    transition: opacity 1.1s ease-out, transform 1.2s ease-out;
-    transition: opacity 1.1s ease-out, transform 1.2s ease-out,
-      -webkit-transform 1.2s ease-out;
-    will-change: opacity, visibility;
-  }
-  .fade-out-section.is-not-visible {
-    opacity: 0.0;
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-    visibility: hidden;
-  }
+  opacity: 1;
+  -webkit-transform: translateY(20vh);
+  -ms-transform: translateY(20vh);
+  transform: translateY(20vh);
+  visibility: visible;
+  -webkit-transition: opacity 1.1s ease-out, -webkit-transform 1.2s ease-out;
+  transition: opacity 1.1s ease-out, -webkit-transform 1.2s ease-out;
+  -o-transition: opacity 1.1s ease-out, transform 1.2s ease-out;
+  transition: opacity 1.1s ease-out, transform 1.2s ease-out;
+  transition: opacity 1.1s ease-out, transform 1.2s ease-out,
+    -webkit-transform 1.2s ease-out;
+  will-change: opacity, visibility;
+}
+.fade-out-section.is-not-visible {
+  opacity: 0;
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
+  visibility: hidden;
+}
 
 .image-animate,
 .squares {
